2013-05-17  J.J. Allaire <jj@rstudio.org>

        * src/attributes.cpp: prevent gc problems with RNGScope destructor
        in attributes generated functions; don't include package header file
        in generated cpp exports file
        * src/api.cpp: use unsigned long for RNG scope counter

2013-04-28  Dirk Eddelbuettel  <edd@debian.org>

	* src/api.cpp (Rcpp): No longer use Rd_format(Real|Complex) which is
	a very verboten R internal; formatting to string is now very bare bones

2013-04-27  Dirk Eddelbuettel  <edd@debian.org>

	* src/Makevars: Improved use as well as a new possible overrride of
	/usr/bin/install_name_tool on OS X, once again contributed by Simon

2013-04-16  Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/sugar/functions/na_omit.h : new function na_omit to remove
        missing values from a vector.
        * src/attributes.cpp : portability fix (from Martyn Plummer)
        * include/Rcpp/api/meat/Vector.h : portability fix (from Martyn Plummer)

2013-04-14  Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/traits/is_na.h: complex version did not work.
        added default for VECSXP and EXPRSXP versions

2013-04-02  Dirk Eddelbuettel  <edd@debian.org>

	* src/Date.cpp: Corrected operator-() for Date and Datetime objects
	to behave more inline with C++ standard

	* inst/include/Rcpp/Date.h: operator-() for Dates now returns a
	double as the date itself is fractional double since epoch

	* inst/unitTests/cpp/dates.cpp: New file with C++ portion of tests
	factored out from R unit test file
	* inst/unitTests/runit.Date.R: Rewritten for use with new C++ tests

2013-04-02 Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/generated/DataFrame_generated.h : DateFrame::create
        uses List::create and then feeds to the DataFrame constructor, which
        seems to work better than the previous approach of calling back to the
        data.frame function in R